構造工学論文集を追加

--- a/C-Miki.bib
+++ b/C-Miki.bib
@@ -1,6 +1,32 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+@ARTICLE{1987_33_775,
+  author = {藤野　陽三，バルティア　B.　K.，三木　千寿，伊藤　学},
+  title = {車両の同時載荷が道路橋の疲労損傷に及ぼす影響},
+  journal = {構造工学論文集},
+  year = {1987},
+  volume = {33},
+  pages = {775-785},
+  file = {1987_33_775_車両の同時載荷が道路橋の疲労損傷に及ぼす影響.pdf:JST\\1987_33_775_車両の同時載荷が道路橋の疲労損傷に及ぼす影響.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0775.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
+}
+
+@ARTICLE{1993_39-3_989,
+  author = {三木　千壽，舘石　和雄，J. F. RICCI，梶本　勝也},
+  title = {橋梁部材のスカーラップ部に生じる面外変形挙動とその疲労強度に関する研究},
+  journal = {構造工学論文集},
+  year = {1993},
+  volume = {39-3},
+  pages = {989-997},
+  file = {1993_39-3_989_橋梁部材のスカーラップ部に生じる面外変形挙動とその疲労強度に関する研究.pdf:JST\\1993_39-3_989_橋梁部材のスカーラップ部に生じる面外変形挙動とその疲労強度に関する研究.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1993/39-3-0989.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1993/mg01.htm}
+}
+
 @ARTICLE{1987_386_73,
   author = {Chitoshi Miki and Takeshi Mori and Kenji Sakamoto and Toshimi Sasaki},
   title = {縦方向溶接継手のブローホールからの疲労亀裂進展解析（英文）},
@@ -214,6 +240,58 @@
   url = {http://ci.nii.ac.jp/naid/10009264266/}
 }
 
+@ARTICLE{2002_48A-3_1099,
+  author = {ボータン　フン，佐々木　栄一，市川　篤司，三木　千壽},
+  title = {腐食を模擬した模型桁のせん断耐力に関する実験および解析},
+  journal = {構造工学論文集},
+  year = {2002},
+  volume = {48A-3},
+  pages = {1099-1105},
+  file = {2002_48A-3_1099_腐食を模擬した模型桁のせん断耐力に関する実験および解析.pdf:JST\\2002_48A-3_1099_腐食を模擬した模型桁のせん断耐力に関する実験および解析.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2002/48A-3-1099.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2002/mg02.htm}
+}
+
+@ARTICLE{1991_37-2_629,
+  author = {三上　市藏，三木　千壽，土田　貴敬，風間　徹},
+  title = {ファジィ真理値を用いた知識獲得手法　−鋼橋損傷に関するアンケートの整理−},
+  journal = {構造工学論文集},
+  year = {1991},
+  volume = {37-2},
+  pages = {629-641},
+  file = {1991_37-2_629_ファジィ真理値を用いた知識獲得手法　−鋼橋損傷に関するアンケートの整理−.pdf:JST\\1991_37-2_629_ファジィ真理値を用いた知識獲得手法　−鋼橋損傷に関するアンケートの整理−.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-2-0629.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg01.htm}
+}
+
+@ARTICLE{1989_35-3_977,
+  author = {三上　市藏，三木　千壽，田中　成典},
+  title = {鋼道路橋の疲労亀裂に関するルールとフレームによる知識ベース・エキスパートシステム},
+  journal = {構造工学論文集},
+  year = {1989},
+  volume = {35-3},
+  pages = {977-990},
+  file = {1989_35-3_977_鋼道路橋の疲労亀裂に関するルールとフレームによる知識ベース・エキスパートシステム.pdf:JST\\1989_35-3_977_鋼道路橋の疲労亀裂に関するルールとフレームによる知識ベース・エキスパートシステム.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1989/35-3-0977.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1989/mg01.htm}
+}
+
+@ARTICLE{1990_36-3_1003,
+  author = {三上　市藏，三木　千壽，田中　成典，土田　貴敬},
+  title = {鋼橋疲労損傷の補修方法選定システムのための因果ネットワークによる推論手法},
+  journal = {構造工学論文集},
+  year = {1990},
+  volume = {36-3},
+  pages = {1003-1014},
+  file = {1990_36-3_1003_鋼橋疲労損傷の補修方法選定システムのための因果ネットワークによる推論手法.pdf:JST\\1990_36-3_1003_鋼橋疲労損傷の補修方法選定システムのための因果ネットワークによる推論手法.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1990/36-3-1003.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1990/mg02.htm}
+}
+
 @ARTICLE{2001_668_271,
   author = {三木 千壽 and 伊藤 裕一 and 後藤 清彦},
   title = {疲労損傷に対する補修事例のインターネット上データベースの構築とその利用},
@@ -323,6 +401,19 @@
   source = {all/ID121178.html},
   timestamp = {2011.11.26},
   type = {英文論文（投稿論文）}
+}
+
+@ARTICLE{2010_56_671,
+  author = {三木 千壽 and 山口 浩 and 判治 剛 and 田辺 篤史},
+  title = {無線センサネットワークによる鋼橋部材の疲労損傷原因の特定の試み},
+  journal = {構造工学論文集A},
+  year = {2010},
+  volume = {56},
+  pages = {671-679},
+  file = {2010_56_671_無線センサネットワークによる鋼橋部材の疲労損傷原因の特定の試み.pdf:JST\\2010_56_671_無線センサネットワークによる鋼橋部材の疲労損傷原因の特定の試み.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2010/56-0671.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2010/mg01.htm}
 }
 
 @ARTICLE{2000_647_281,
@@ -695,6 +786,32 @@
   month = {7},
   file = {2010_66_337_疲労損傷の疑いのある橋梁の応力測定.pdf:JSCE\\2010_66_337_疲労損傷の疑いのある橋梁の応力測定.pdf:PDF},
   timestamp = {2011.11.26}
+}
+
+@ARTICLE{1990_36-1_409,
+  author = {三木　千壽，坂野　昌弘},
+  title = {疲労亀裂進展解析による疲労設計曲線の検討},
+  journal = {構造工学論文集},
+  year = {1990},
+  volume = {36-1},
+  pages = {409-416},
+  file = {1990_36-1_409_疲労亀裂進展解析による疲労設計曲線の検討.pdf:JST\\1990_36-1_409_疲労亀裂進展解析による疲労設計曲線の検討.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1990/36-1-0409.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1990/mg01.htm}
+}
+
+@ARTICLE{1989_35-1_321,
+  author = {三木　千壽，坂野　昌弘，豊田　幸宏},
+  title = {隅肉溶接止端からの疲労亀裂の発生と初期進展挙動},
+  journal = {構造工学論文集},
+  year = {1989},
+  volume = {35-1},
+  pages = {321-328},
+  file = {1989_35-1_321_隅肉溶接止端からの疲労亀裂の発生と初期進展挙動.pdf:JST\\1989_35-1_321_隅肉溶接止端からの疲労亀裂の発生と初期進展挙動.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1989/35-1-0321.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1989/mg01.htm}
 }
 
 @ARTICLE{2001_668_29,
@@ -1143,6 +1260,201 @@
   url = {http://ci.nii.ac.jp/naid/10001837011/}
 }
 
+@ARTICLE{1991_37-3_1123,
+  author = {三木　千寿，中村　賢造，田中　雅人},
+  title = {既設鋼桁橋下フランジ補強ディテールの疲労強度},
+  journal = {構造工学論文集},
+  year = {1991},
+  volume = {37-3},
+  pages = {1123-1132},
+  file = {1991_37-3_1123_既設鋼桁橋下フランジ補強ディテールの疲労強度.pdf:JST\\1991_37-3_1123_既設鋼桁橋下フランジ補強ディテールの疲労強度.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-3-1123.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg02.htm}
+}
+
+@ARTICLE{1990_36-3_949,
+  author = {三木　千寿，妹尾　賢一郎，森　猛},
+  title = {鋼橋支承部ソールプレート端に生じた疲労損傷と局部応力についての考察},
+  journal = {構造工学論文集},
+  year = {1990},
+  volume = {36-3},
+  pages = {949-958},
+  file = {1990_36-3_949_鋼橋支承部ソールプレート端に生じた疲労損傷と局部応力についての考察.pdf:JST\\1990_36-3_949_鋼橋支承部ソールプレート端に生じた疲労損傷と局部応力についての考察.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1990/36-3-0949.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1990/mg01.htm}
+}
+
+@ARTICLE{1986_32_597,
+  author = {三木　千寿，後藤　祐司，村越　潤，舘石　和雄},
+  title = {シミュレーションによる道路橋の疲労設計活荷重の研究},
+  journal = {構造工学論文集},
+  year = {1986},
+  volume = {32},
+  pages = {597-608},
+  file = {1986_32_597_シミュレーションによる道路橋の疲労設計活荷重の研究.pdf:JST\\1986_32_597_シミュレーションによる道路橋の疲労設計活荷重の研究.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1986/32-0597.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1986/mg01.htm}
+}
+
+@ARTICLE{1990_36-3_975,
+  author = {三木　千寿，杉本　一朗，宮崎　早苗，森　猛},
+  title = {鋼道路橋の疲労照査のための過重に関する研究},
+  journal = {構造工学論文集},
+  year = {1990},
+  volume = {36-3},
+  pages = {975-984},
+  file = {1990_36-3_975_鋼道路橋の疲労照査のための過重に関する研究.pdf:JST\\1990_36-3_975_鋼道路橋の疲労照査のための過重に関する研究.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1990/36-3-0975.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1990/mg01.htm}
+}
+
+@ARTICLE{1988_34_493,
+  author = {三木　千寿，森　猛，時田　英夫},
+  title = {斜め溶接割れからの疲労亀裂の発生と進展},
+  journal = {構造工学論文集},
+  year = {1988},
+  volume = {34},
+  pages = {493-500},
+  file = {1988_34_493_斜め溶接割れからの疲労亀裂の発生と進展.pdf:JST\\1988_34_493_斜め溶接割れからの疲労亀裂の発生と進展.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1988/34-0493.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1988/mg01.htm}
+}
+
+@ARTICLE{1986_32_11,
+  author = {三木　千寿，森　猛，阪本　謙二，佐々木　利視},
+  title = {縦方向溶接部のルートブローホールからの疲労きれつ進展解析},
+  journal = {構造工学論文集},
+  year = {1986},
+  volume = {32},
+  pages = {11-23},
+  file = {1986_32_11_縦方向溶接部のルートブローホールからの疲労きれつ進展解析.pdf:JST\\1986_32_11_縦方向溶接部のルートブローホールからの疲労きれつ進展解析.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1986/32-0011.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1986/mg01.htm}
+}
+
+@ARTICLE{1987_33_393,
+  author = {三木　千寿，森　猛，阪本　謙二，柏木　洋之},
+  title = {前面すみ肉溶接継手の疲労強度に対する継手寸法の影響},
+  journal = {構造工学論文集},
+  year = {1987},
+  volume = {33},
+  pages = {393-402},
+  file = {1987_33_393_前面すみ肉溶接継手の疲労強度に対する継手寸法の影響.pdf:JST\\1987_33_393_前面すみ肉溶接継手の疲労強度に対する継手寸法の影響.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0393.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
+}
+
+@ARTICLE{1991_37-1_493,
+  author = {三木　千寿，池田　清宏，沖中　知雄，吉見　昌宏},
+  title = {超音波パルスエコー法の数値シミュレーション},
+  journal = {構造工学論文集},
+  year = {1991},
+  volume = {37-1},
+  pages = {493-502},
+  file = {1991_37-1_493_超音波パルスエコー法の数値シミュレーション.pdf:JST\\1991_37-1_493_超音波パルスエコー法の数値シミュレーション.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-1-0493.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg01.htm}
+}
+
+@ARTICLE{1991_37-1_511,
+  author = {三木　千寿，田中　靖資，奥川　淳志},
+  title = {瀬戸大橋トラス弦材角溶接部の非破壊検査に対する確率および破壊力学手法を用いた評価},
+  journal = {構造工学論文集},
+  year = {1991},
+  volume = {37-1},
+  pages = {511-520},
+  file = {1991_37-1_511_瀬戸大橋トラス弦材角溶接部の非破壊検査に対する確率および破壊力学手法を用いた評価.pdf:JST\\1991_37-1_511_瀬戸大橋トラス弦材角溶接部の非破壊検査に対する確率および破壊力学手法を用いた評価.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-1-0511.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg01.htm}
+}
+
+@ARTICLE{1988_34_543,
+  author = {三木　千寿，竹之内　博行，森　猛，大川　征治},
+  title = {主桁と対傾構との取合部の疲労損傷に対する補修方法の提案},
+  journal = {構造工学論文集},
+  year = {1988},
+  volume = {34},
+  pages = {543-550},
+  file = {1988_34_543_主桁と対傾構との取合部の疲労損傷に対する補修方法の提案.pdf:JST\\1988_34_543_主桁と対傾構との取合部の疲労損傷に対する補修方法の提案.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1988/34-0543.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1988/mg01.htm}
+}
+
+@ARTICLE{1992_38-3_1055,
+  author = {三木　千寿，舘石　和雄，山本　美博，宮内　政信},
+  title = {局部応力を基準とした疲労評価手法に関する一考察},
+  journal = {構造工学論文集},
+  year = {1992},
+  volume = {38-3},
+  pages = {1055-1062},
+  file = {1992_38-3_1055_局部応力を基準とした疲労評価手法に関する一考察.pdf:JST\\1992_38-3_1055_局部応力を基準とした疲労評価手法に関する一考察.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1992/38-3-1055.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1992/mg02.htm}
+}
+
+@ARTICLE{1991_37-3_1163,
+  author = {三木　千寿，舘石　和雄，高木　千太郎},
+  title = {鋼床版縦リブ・横リブ交差部の応力実測とその分析},
+  journal = {構造工学論文集},
+  year = {1991},
+  volume = {37-3},
+  pages = {1163-1168},
+  file = {1991_37-3_1163_鋼床版縦リブ・横リブ交差部の応力実測とその分析.pdf:JST\\1991_37-3_1163_鋼床版縦リブ・横リブ交差部の応力実測とその分析.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-3-1163.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg02.htm}
+}
+
+@ARTICLE{1990_36-3_959,
+  author = {三木　千寿，范　恒達，田中　雅人},
+  title = {隅肉溶接部の疲労強度とルート部の欠陥について},
+  journal = {構造工学論文集},
+  year = {1990},
+  volume = {36-3},
+  pages = {959-966},
+  file = {1990_36-3_959_隅肉溶接部の疲労強度とルート部の欠陥について.pdf:JST\\1990_36-3_959_隅肉溶接部の疲労強度とルート部の欠陥について.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1990/36-3-0959.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1990/mg01.htm}
+}
+
+@ARTICLE{1987_33_383,
+  author = {三木　千寿，豊田　幸宏，宮本　公男，梅田　晶一},
+  title = {超音波を用いた疲労亀裂の検出},
+  journal = {構造工学論文集},
+  year = {1987},
+  volume = {33},
+  pages = {383-391},
+  file = {1987_33_383_超音波を用いた疲労亀裂の検出.pdf:JST\\1987_33_383_超音波を用いた疲労亀裂の検出.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0383.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
+}
+
+@ARTICLE{1989_35-3_951,
+  author = {三木　千寿，豊田　幸宏，森　猛，榎土　尚宏},
+  title = {鋼桁ディテールの道路橋シミュレーション荷重疲労},
+  journal = {構造工学論文集},
+  year = {1989},
+  volume = {35-3},
+  pages = {951-960},
+  file = {1989_35-3_951_鋼桁ディテールの道路橋シミュレーション荷重疲労.pdf:JST\\1989_35-3_951_鋼桁ディテールの道路橋シミュレーション荷重疲労.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1989/35-3-0951.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1989/mg01.htm}
+}
+
 @ARTICLE{1994_1_105,
   author = {三木 千尋 and 成宮 隆雄 and 森下 統一 and 加藤 昌彦},
   title = {自動超音波探傷システムの板継ぎ溶接部品質保証への適用性の検討},
@@ -1224,6 +1536,19 @@
   timestamp = {2011.11.26},
   type = {論文},
   url = {http://ci.nii.ac.jp/naid/40002741138/}
+}
+
+@ARTICLE{1991_37-2_759,
+  author = {上原　靖，八坂　裕紀，篠原　修，三木　千壽，桐野　浩充},
+  title = {新中川橋梁群−辰巳新橋の景観設計},
+  journal = {構造工学論文集},
+  year = {1991},
+  volume = {37-2},
+  pages = {759-771},
+  file = {1991_37-2_759_新中川橋梁群−辰巳新橋の景観設計.pdf:JST\\1991_37-2_759_新中川橋梁群−辰巳新橋の景観設計.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-2-0759.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg01.htm}
 }
 
 @ARTICLE{1985_356_279,
@@ -1316,6 +1641,32 @@
   type = {投稿論文}
 }
 
+@ARTICLE{1987_33_421,
+  author = {下川　浩資，竹名　興英，伊藤　文夫，三木　千寿},
+  title = {リブ十字すみ肉溶接継手の疲労強度に及ぼす平均応力の影響},
+  journal = {構造工学論文集},
+  year = {1987},
+  volume = {33},
+  pages = {421-428},
+  file = {1987_33_421_リブ十字すみ肉溶接継手の疲労強度に及ぼす平均応力の影響.pdf:JST\\1987_33_421_リブ十字すみ肉溶接継手の疲労強度に及ぼす平均応力の影響.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0421.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
+}
+
+@ARTICLE{1987_33_429,
+  author = {下川　浩資，竹名　興英，伊藤　文夫，三木　千寿},
+  title = {BOOMPa級鋼材の大型ガセット継手の疲労強度},
+  journal = {構造工学論文集},
+  year = {1987},
+  volume = {33},
+  pages = {429-437},
+  file = {1987_33_429_BOOMPa級鋼材の大型ガセット継手の疲労強度.pdf:JST\\1987_33_429_BOOMPa級鋼材の大型ガセット継手の疲労強度.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0429.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
+}
+
 @ARTICLE{2008_64_167,
   author = {下里 哲弘 and 木ノ本 剛 and 三木 千壽},
   title = {打込式高力ボルト支圧接合継手の耐荷力性状とFEM解析モデルの提案},
@@ -1404,6 +1755,45 @@
   publisher = {土木学会},
   timestamp = {2011.12.05},
   url = {http://ci.nii.ac.jp/naid/10007555284/}
+}
+
+@ARTICLE{2004_50A_1467,
+  author = {佐々木 栄一，三木 千壽，市川 篤司，高橋 和也},
+  title = {鋼製ラーメン橋脚の大規模地震時挙動},
+  journal = {構造工学論文集},
+  year = {2004},
+  volume = {50A},
+  pages = {1467-1477},
+  file = {2004_50A_1467_鋼製ラーメン橋脚の大規模地震時挙動.pdf:JST\\2004_50A_1467_鋼製ラーメン橋脚の大規模地震時挙動.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2004/50-1467.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2004/mg02.htm}
+}
+
+@ARTICLE{2002_48A-3_1107,
+  author = {佐々木　栄一，荒川　泰二，三木　千壽，市川　篤司},
+  title = {リブ溶接止端部に発生する低サイクル疲労き裂とそれを起点とする脆性破壊の発生可能性},
+  journal = {構造工学論文集},
+  year = {2002},
+  volume = {48A-3},
+  pages = {1107-1112},
+  file = {2002_48A-3_1107_リブ溶接止端部に発生する低サイクル疲労き裂とそれを起点とする脆性破壊の発生可能性.pdf:JST\\2002_48A-3_1107_リブ溶接止端部に発生する低サイクル疲労き裂とそれを起点とする脆性破壊の発生可能性.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2002/48A-3-1107.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2002/mg02.htm}
+}
+
+@ARTICLE{2002_48A-3_1063,
+  author = {保坂　鐵矢，柳沼　安俊，入部　孝夫，市川　篤司，三木　千壽},
+  title = {全断面現場溶接Z継手の合理的な一手法と施工性確認試験},
+  journal = {構造工学論文集},
+  year = {2002},
+  volume = {48A-3},
+  pages = {1063-1072},
+  file = {2002_48A-3_1063_全断面現場溶接Z継手の合理的な一手法と施工性確認試験.pdf:JST\\2002_48A-3_1063_全断面現場溶接Z継手の合理的な一手法と施工性確認試験.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2002/48A-3-1063.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2002/mg02.htm}
 }
 
 @ARTICLE{2010_66_653,
@@ -1595,6 +1985,19 @@
   url = {http://www.journalarchive.jst.go.jp/japanese/jnlabstract_ja.php?cdjournal=jscej1984&cdvol=1987&noissue=386&startpage=115}
 }
 
+@ARTICLE{1988_34_375,
+  author = {増田　陳紀，三木　千寿，西脇　威夫，皆川　勝},
+  title = {合成I桁橋の対傾構部材力に及ぼす床版損傷補修対策の影響},
+  journal = {構造工学論文集},
+  year = {1988},
+  volume = {34},
+  pages = {375-383},
+  file = {1988_34_375_合成I桁橋の対傾構部材力に及ぼす床版損傷補修対策の影響.pdf:JST\\1988_34_375_合成I桁橋の対傾構部材力に及ぼす床版損傷補修対策の影響.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1988/34-0375.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1988/mg01.htm}
+}
+
 @ARTICLE{1997_570_33,
   author = {大橋 治一 and 三木 千壽 and 小野 秀一},
   title = {ダブリング補強された吊橋ハンガーピン定着部の接触挙動と溶接部の応力伝達},
@@ -1675,6 +2078,19 @@
   url = {http://ci.nii.ac.jp/naid/10001806557/}
 }
 
+@ARTICLE{1992_38-3_1031,
+  author = {大江　慎一，三木　千寿，奥川　淳志，安井　成豊},
+  title = {800Mpa級鋼材を用いた実大トラス弦材各種構造の疲労強度},
+  journal = {構造工学論文集},
+  year = {1992},
+  volume = {38-3},
+  pages = {1031-1044},
+  file = {1992_38-3_1031_800Mpa級鋼材を用いた実大トラス弦材各種構造の疲労強度.pdf:JST\\1992_38-3_1031_800Mpa級鋼材を用いた実大トラス弦材各種構造の疲労強度.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1992/38-3-1031.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1992/mg02.htm}
+}
+
 @ARTICLE{1997_556_77,
   author = {奥山 裕一 and 三木 千壽},
   title = {ディコンボリューション処理による超音波探傷試験の時間分解能向上の試み},
@@ -1740,6 +2156,19 @@
   url = {http://ci.nii.ac.jp/naid/10012486276/}
 }
 
+@ARTICLE{1991_37-1_485,
+  author = {宮崎　早苗，田中　康博，三木　千寿},
+  title = {超音波深傷の数値シミュレーションのためのFEM-BEM結合解法について},
+  journal = {構造工学論文集},
+  year = {1991},
+  volume = {37-1},
+  pages = {485-491},
+  file = {1991_37-1_485_超音波深傷の数値シミュレーションのためのFEM-BEM結合解法について.pdf:JST\\1991_37-1_485_超音波深傷の数値シミュレーションのためのFEM-BEM結合解法について.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1991/37-1-0485.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1991/mg01.htm}
+}
+
 @ARTICLE{2006_62_794,
   author = {小林 裕介 and 三木 千壽 and 田辺 篤史},
   title = {鋼床版箱桁橋梁の温度変形挙動を利用した健全度評価モニタリング},
@@ -1766,6 +2195,19 @@
   publisher = {土木学会},
   timestamp = {2011.12.05},
   url = {http://ci.nii.ac.jp/naid/10013551462/}
+}
+
+@ARTICLE{2002_48A-2_979,
+  author = {小林　裕介，三木　千壽，出野　麻由子，斎藤　勝晶},
+  title = {合成桁橋梁の健全度モニタリングを目的とした温度変形挙動の検討},
+  journal = {構造工学論文集},
+  year = {2002},
+  volume = {48A-2},
+  pages = {979-985},
+  file = {2002_48A-2_979_合成桁橋梁の健全度モニタリングを目的とした温度変形挙動の検討.pdf:JST\\2002_48A-2_979_合成桁橋梁の健全度モニタリングを目的とした温度変形挙動の検討.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2002/48A-2-0979.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2002/mg02.htm}
 }
 
 @ARTICLE{2004_766_233,
@@ -1845,6 +2287,84 @@
   timestamp = {2011.11.26}
 }
 
+@ARTICLE{2001_47-A3_983,
+  author = {山口　亮太，伊藤　裕一，三木　千壽，市川　篤司},
+  title = {社会的損失を考慮した道路橋のライフサイクルコスト評価の試み},
+  journal = {構造工学論文集},
+  year = {2001},
+  volume = {47-A3},
+  pages = {983-989},
+  file = {2001_47-A3_983_社会的損失を考慮した道路橋のライフサイクルコスト評価の試み.pdf:JST\\2001_47-A3_983_社会的損失を考慮した道路橋のライフサイクルコスト評価の試み.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2001/47-A3-0983.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2001/mg02.htm}
+}
+
+@ARTICLE{2000_46A-1_119,
+  author = {山口 栄輝，市川 篤司，池田 学，久保 知徳，三木 千寿},
+  title = {繰り返し荷重を受ける鋼製ラーメン隅角部におけるハンチの効果},
+  journal = {構造工学論文集},
+  year = {2000},
+  volume = {46A-1},
+  pages = {119-125},
+  file = {2000_46A-1_119_繰り返し荷重を受ける鋼製ラーメン隅角部におけるハンチの効果.pdf:JST\\2000_46A-1_119_繰り返し荷重を受ける鋼製ラーメン隅角部におけるハンチの効果.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2000/46A-1-0119.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2000/mg01.htm}
+}
+
+@ARTICLE{2001_47-A3_1153,
+  author = {山沢　哲也，野上　邦栄，三木　千壽},
+  title = {立体挙動を考慮した連続合成桁橋中間支点部の合理化設計法の基礎的研究},
+  journal = {構造工学論文集},
+  year = {2001},
+  volume = {47-A3},
+  pages = {1153-1160},
+  file = {2001_47-A3_1153_立体挙動を考慮した連続合成桁橋中間支点部の合理化設計法の基礎的研究.pdf:JST\\2001_47-A3_1153_立体挙動を考慮した連続合成桁橋中間支点部の合理化設計法の基礎的研究.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2001/47-A3-1153.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2001/mg02.htm}
+}
+
+@ARTICLE{2001_47-A3_1161,
+  author = {山田　真幸 and サトーン　ペンポン and 三木　千壽 and 市川　篤司　and  入部　孝夫},
+  title = {RC床版と鋼フランジ間の付着とスラブアンカーによるせん断抵抗の評価},
+  journal = {構造工学論文集},
+  year = {2001},
+  volume = {47-A3},
+  pages = {1161-1168},
+  file = {2001_47-A3_1161_RC床版と鋼フランジ間の付着とスラブアンカーによるせん断抵抗の評価.pdf:JST\\2001_47-A3_1161_RC床版と鋼フランジ間の付着とスラブアンカーによるせん断抵抗の評価.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2001/47-A3-1161.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2001/mg02.htm}
+}
+
+@ARTICLE{2002_48A-3_1113,
+  author = {山田　真幸，三木　千壽，市川　篤司},
+  title = {既設非合成桁橋梁のRC床版と主桁上フランジ間で生じるせん断応力と実耐荷力評価},
+  journal = {構造工学論文集},
+  year = {2002},
+  volume = {48A-3},
+  pages = {1113-1120},
+  file = {2002_48A-3_1113_既設非合成桁橋梁のRC床版と主桁上フランジ間で生じるせん断応力と実耐荷力評価.pdf:JST\\2002_48A-3_1113_既設非合成桁橋梁のRC床版と主桁上フランジ間で生じるせん断応力と実耐荷力評価.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2002/48A-3-1113.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2002/mg02.htm}
+}
+
+@ARTICLE{1998_44-3_1317,
+  author = {山田　真幸，三木　千壽，舘石　和雄，権藤　健二},
+  title = {段落しを有する鉄筋コンクリート柱の破壊過程とアラミド繊維巻き立てによる補強効果の検討},
+  journal = {構造工学論文集},
+  year = {1998},
+  volume = {44-3},
+  pages = {1317-1324},
+  file = {1998_44-3_1317_段落しを有する鉄筋コンクリート柱の破壊過程とアラミド繊維巻き立てによる補強効果の検討.pdf:JST\\1998_44-3_1317_段落しを有する鉄筋コンクリート柱の破壊過程とアラミド繊維巻き立てによる補強効果の検討.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1998/44-A3-1317.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1998/mg02.htm}
+}
+
 @ARTICLE{1998_591_243,
   author = {岡下 勝彦 and 大南 亮一 and 道場 康二 and 山本 晃久 and 冨松 実 and 丹治 康行 and 三木 千壽},
   title = {兵庫県南部地震による神戸港港湾幹線道路P75橋脚隅角部におけるき裂損傷の原因調査・検討},
@@ -1898,6 +2418,19 @@
   url = {http://ci.nii.ac.jp/naid/10002526869/}
 }
 
+@ARTICLE{2002_48A-2_489,
+  author = {島村　一訓，竹之内　博行，福澤　小太郎，三木　千壽},
+  title = {実大実験による埋設パイプラインの管軸直角水平方向地盤ばね特性の研究},
+  journal = {構造工学論文集},
+  year = {2002},
+  volume = {48A-2},
+  pages = {489-496},
+  file = {2002_48A-2_489_実大実験による埋設パイプラインの管軸直角水平方向地盤ばね特性の研究.pdf:JST\\2002_48A-2_489_実大実験による埋設パイプラインの管軸直角水平方向地盤ばね特性の研究.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2002/48A-2-0489.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2002/mg01.htm}
+}
+
 @ARTICLE{2008_64_71,
   author = {平林 雅也 and 三木 千壽 and 田辺 篤史 and 白旗 弘実},
   title = {マルチフェイズドアレイ探触子を用いた高精度超音波探傷試験},
@@ -1926,6 +2459,19 @@
   timestamp = {2011.11.26},
   type = {論文},
   url = {http://ci.nii.ac.jp/naid/40002740306/}
+}
+
+@ARTICLE{1996_42-3_965,
+  author = {後藤　信弘，関口　信雄，松田　英光，藤田　泰，安波　博道，藤井　堅，三木　千寿},
+  title = {ステンレスクラッド鋼を用いた実寸断面橋梁部材の試作について},
+  journal = {構造工学論文集},
+  year = {1996},
+  volume = {42-3},
+  pages = {965-974},
+  file = {1996_42-3_965_ステンレスクラッド鋼を用いた実寸断面橋梁部材の試作について.pdf:JST\\1996_42-3_965_ステンレスクラッド鋼を用いた実寸断面橋梁部材の試作について.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1996/42-A3-0965.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1996/mg02.htm}
 }
 
 @ARTICLE{1997_570_97,
@@ -1987,6 +2533,19 @@
   url = {http://ci.nii.ac.jp/naid/10014351918/}
 }
 
+@ARTICLE{2006_52A_477,
+  author = {木下　幸治，三木　千壽，田辺　篤史，市川　篤司},
+  title = {円形断面柱を有する鋼製ラーメン橋脚の耐震性能評価},
+  journal = {構造工学論文集},
+  year = {2006},
+  volume = {52A},
+  pages = {477-488},
+  file = {2006_52A_477_円形断面柱を有する鋼製ラーメン橋脚の耐震性能評価.pdf:JST\\2006_52A_477_円形断面柱を有する鋼製ラーメン橋脚の耐震性能評価.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2006/52A-0477.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2006/mg01.htm}
+}
+
 @ARTICLE{2008_64_571,
   author = {木下幸治 and 三木千壽 and 市川篤司},
   title = {円柱を有する既設鋼製ラーメン橋脚の耐震性能に関する検討},
@@ -2030,6 +2589,19 @@
   publisher = {土木学会},
   timestamp = {2011.12.05},
   url = {http://ci.nii.ac.jp/naid/10001837052/}
+}
+
+@ARTICLE{1997_43-3_1003,
+  author = {杉本　一朗，三木　千壽，市川　篤司，伊藤　裕一},
+  title = {高速走行下での鋼鉄道箱桁の動的挙動と補剛材下端部の応力},
+  journal = {構造工学論文集},
+  year = {1997},
+  volume = {43-3},
+  pages = {1003-1012},
+  file = {1997_43-3_1003_高速走行下での鋼鉄道箱桁の動的挙動と補剛材下端部の応力.pdf:JST\\1997_43-3_1003_高速走行下での鋼鉄道箱桁の動的挙動と補剛材下端部の応力.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1997/43-A3-1003.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1997/mg02.htm}
 }
 
 @ARTICLE{2005_787_47,
@@ -2091,6 +2663,19 @@
   timestamp = {2011.11.26}
 }
 
+@ARTICLE{1990_36-1_389,
+  author = {森　好生，塩崎　正孝，三木　千寿，栗原　正好},
+  title = {歪時効による鋼材の靱性変化の評価},
+  journal = {構造工学論文集},
+  year = {1990},
+  volume = {36-1},
+  pages = {389-397},
+  file = {1990_36-1_389_歪時効による鋼材の靱性変化の評価.pdf:JST\\1990_36-1_389_歪時効による鋼材の靱性変化の評価.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1990/36-1-0389.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1990/mg01.htm}
+}
+
 @ARTICLE{1998_605_289,
   author = {森 猛 and 慶 甲秀 and 三木 千寿},
   title = {十字すみ肉溶接継手の疲労強度と鋼材・溶接材料の静的強度との関係},
@@ -2105,6 +2690,58 @@
   publisher = {土木学会},
   timestamp = {2011.12.05},
   url = {http://ci.nii.ac.jp/naid/10001950728/}
+}
+
+@ARTICLE{1995_41-3_829,
+  author = {森　猛，三木　千寿},
+  title = {すみ肉溶接部に生じる表面疲労亀裂の形状},
+  journal = {構造工学論文集},
+  year = {1995},
+  volume = {41-3},
+  pages = {829-838},
+  file = {1995_41-3_829_すみ肉溶接部に生じる表面疲労亀裂の形状.pdf:JST\\1995_41-3_829_すみ肉溶接部に生じる表面疲労亀裂の形状.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1995/41-A3-0829.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1995/mg01.htm}
+}
+
+@ARTICLE{1994_40-3_1223,
+  author = {森　猛，吉本　秀一，林　俊一，三木　千寿},
+  title = {塗装鋼板のすみ肉溶接施工試験および十字継手の引張強度と疲労強度},
+  journal = {構造工学論文集},
+  year = {1994},
+  volume = {40-3},
+  pages = {1223-1232},
+  file = {1994_40-3_1223_塗装鋼板のすみ肉溶接施工試験および十字継手の引張強度と疲労強度.pdf:JST\\1994_40-3_1223_塗装鋼板のすみ肉溶接施工試験および十字継手の引張強度と疲労強度.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1994/40-3-1223.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1994/mg02.htm}
+}
+
+@ARTICLE{1994_40-3_1233,
+  author = {森　猛，田中　雅人，小幡　善人，三木　千寿},
+  title = {塗装鋼板溶接桁の疲労強度},
+  journal = {構造工学論文集},
+  year = {1994},
+  volume = {40-3},
+  pages = {1233-1242},
+  file = {1994_40-3_1233_塗装鋼板溶接桁の疲労強度.pdf:JST\\1994_40-3_1233_塗装鋼板溶接桁の疲労強度.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1994/40-3-1233.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1994/mg02.htm}
+}
+
+@ARTICLE{1993_39-3_937,
+  author = {森　猛，貝沼　重信，三木　千寿},
+  title = {荷重伝達型十字すみ肉溶接継手ルート破壊の疲労強度解析},
+  journal = {構造工学論文集},
+  year = {1993},
+  volume = {39-3},
+  pages = {937-946},
+  file = {1993_39-3_937_荷重伝達型十字すみ肉溶接継手ルート破壊の疲労強度解析.pdf:JST\\1993_39-3_937_荷重伝達型十字すみ肉溶接継手ルート破壊の疲労強度解析.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1993/39-3-0937.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1993/mg01.htm}
 }
 
 @ARTICLE{2002_703_177,
@@ -2288,6 +2925,19 @@
   url = {http://ci.nii.ac.jp/naid/10013551507/}
 }
 
+@ARTICLE{2005_51_1257,
+  author = {田辺　篤史，佐々木　栄一，三木　千壽},
+  title = {隅角部に疲労補修を施した鋼製ラーメン橋脚の地震時挙動},
+  journal = {構造工学論文集},
+  year = {2005},
+  volume = {51},
+  pages = {1257-1266},
+  file = {2005_51_1257_隅角部に疲労補修を施した鋼製ラーメン橋脚の地震時挙動.pdf:JST\\2005_51_1257_隅角部に疲労補修を施した鋼製ラーメン橋脚の地震時挙動.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2005/51-1257.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2005/mg02.htm}
+}
+
 @ARTICLE{1999_612_349,
   author = {町田 文孝 and 三木 千壽 and 吉岡 昭彦},
   title = {主桁ウェブ貫通型横桁取り合い部の疲労特性},
@@ -2350,6 +3000,19 @@
   url = {http://ci.nii.ac.jp/naid/10001807423/}
 }
 
+@ARTICLE{1987_33_439,
+  author = {福井　崇博，谷中　幸和，阪本　謙二，深沢　誠，三木　千寿},
+  title = {吊橋補剛箱桁ハンガーブラケットの疲労試験},
+  journal = {構造工学論文集},
+  year = {1987},
+  volume = {33},
+  pages = {439-449},
+  file = {1987_33_439_吊橋補剛箱桁ハンガーブラケットの疲労試験.pdf:JST\\1987_33_439_吊橋補剛箱桁ハンガーブラケットの疲労試験.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0439.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
+}
+
 @ARTICLE{1997_4_9,
   author = {穴見 健吾 and 三木 千寿},
   title = {溶接継手部の疲労強度の寸法効果に関する研究},
@@ -2410,6 +3073,32 @@
   publisher = {土木学会},
   timestamp = {2011.12.05},
   url = {http://ci.nii.ac.jp/naid/10001837041/}
+}
+
+@ARTICLE{1986_32_631,
+  author = {竹之内　博行，谷倉　泉，古川　正巳，三木　千寿},
+  title = {実交通荷重による橋梁の応力および変形の測定方法},
+  journal = {構造工学論文集},
+  year = {1986},
+  volume = {32},
+  pages = {631-639},
+  file = {1986_32_631_実交通荷重による橋梁の応力および変形の測定方法.pdf:JST\\1986_32_631_実交通荷重による橋梁の応力および変形の測定方法.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1986/32-0631.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1986/mg01.htm}
+}
+
+@ARTICLE{1987_33_361,
+  author = {竹之内　博行，谷倉　泉，高倉　敏，三木　千寿},
+  title = {実交通荷重による鋼鈑桁橋の応力変形挙動},
+  journal = {構造工学論文集},
+  year = {1987},
+  volume = {33},
+  pages = {361-371},
+  file = {1987_33_361_実交通荷重による鋼鈑桁橋の応力変形挙動.pdf:JST\\1987_33_361_実交通荷重による鋼鈑桁橋の応力変形挙動.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1987/33-0361.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1987/mg01.htm}
 }
 
 @ARTICLE{1989_404_315,
@@ -2512,6 +3201,45 @@
   memo = {PDF_LINK: http://www.journalarchive.jst.go.jp/jnlpdf.php?cdjournal=jscej1984&cdvol=1987&noissue=380&startpage=67&chr=ja},
   timestamp = {2011.12.09},
   url = {http://www.journalarchive.jst.go.jp/japanese/jnlabstract_ja.php?cdjournal=jscej1984&cdvol=1987&noissue=380&startpage=67}
+}
+
+@ARTICLE{1986_32_49,
+  author = {竹名　興英，下川　浩資，深沢　誠，三木　千寿},
+  title = {トラス箱断面実部材の曲げ疲労試験},
+  journal = {構造工学論文集},
+  year = {1986},
+  volume = {32},
+  pages = {49-59},
+  file = {1986_32_49_トラス箱断面実部材の曲げ疲労試験.pdf:JST\\1986_32_49_トラス箱断面実部材の曲げ疲労試験.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1986/32-0049.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1986/mg01.htm}
+}
+
+@ARTICLE{1989_35-3_939,
+  author = {竹名　興英，伊藤　文夫，平野　茂，三木　千寿},
+  title = {ボックス断面角継手の溶接欠陥が疲労強度に及ぼす影響},
+  journal = {構造工学論文集},
+  year = {1989},
+  volume = {35-3},
+  pages = {939-949},
+  file = {1989_35-3_939_ボックス断面角継手の溶接欠陥が疲労強度に及ぼす影響.pdf:JST\\1989_35-3_939_ボックス断面角継手の溶接欠陥が疲労強度に及ぼす影響.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1989/35-3-0939.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1989/mg01.htm}
+}
+
+@ARTICLE{1988_34_525,
+  author = {竹名　興英，川上　博道，谷藤　精一，三木　千寿},
+  title = {経年劣化リベットプレートガーダーの疲労強度},
+  journal = {構造工学論文集},
+  year = {1988},
+  volume = {34},
+  pages = {525-534},
+  file = {1988_34_525_経年劣化リベットプレートガーダーの疲労強度.pdf:JST\\1988_34_525_経年劣化リベットプレートガーダーの疲労強度.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1988/34-0525.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1988/mg01.htm}
 }
 
 @ARTICLE{1994_489_167,
@@ -2617,6 +3345,58 @@
   publisher = {土木学会},
   timestamp = {2011.12.05},
   url = {http://ci.nii.ac.jp/naid/10002752667/}
+}
+
+@ARTICLE{1998_44-1_103,
+  author = {藤井　堅，三木　千寿，寺田　宏行，田中　和成，有尾　一郎},
+  title = {ステンレスクラッド鋼の材料特性および残留応力とその発生メカニズム},
+  journal = {構造工学論文集},
+  year = {1998},
+  volume = {44-1},
+  pages = {103-114},
+  file = {1998_44-1_103_ステンレスクラッド鋼の材料特性および残留応力とその発生メカニズム.pdf:JST\\1998_44-1_103_ステンレスクラッド鋼の材料特性および残留応力とその発生メカニズム.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1998/44-A1-0103.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1998/mg01.htm}
+}
+
+@ARTICLE{1997_43-3_1041,
+  author = {藤井　堅，三木　千寿，木村　秀途，中川　茂，安波　博道},
+  title = {ステンレスクラッド鋼を用いた箱桁の曲げ疲労実験},
+  journal = {構造工学論文集},
+  year = {1997},
+  volume = {43-3},
+  pages = {1041-1050},
+  file = {1997_43-3_1041_ステンレスクラッド鋼を用いた箱桁の曲げ疲労実験.pdf:JST\\1997_43-3_1041_ステンレスクラッド鋼を用いた箱桁の曲げ疲労実験.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1997/43-A3-1041.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1997/mg02.htm}
+}
+
+@ARTICLE{2000_46A-1_191,
+  author = {藤井 崇文，藤井 堅，三木 千壽},
+  title = {圧縮を受けるステンレスクラッド鋼板の弾塑性非線形挙動},
+  journal = {構造工学論文集},
+  year = {2000},
+  volume = {46A-1},
+  pages = {191-198},
+  file = {2000_46A-1_191_圧縮を受けるステンレスクラッド鋼板の弾塑性非線形挙動.pdf:JST\\2000_46A-1_191_圧縮を受けるステンレスクラッド鋼板の弾塑性非線形挙動.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2000/46A-1-0191.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2000/mg01.htm}
+}
+
+@ARTICLE{1993_39-3_999,
+  author = {藤井　裕司，松本　毅，三木　千寿，小野　秀一},
+  title = {鋼床版縦リブ継手部の圧縮疲労強度},
+  journal = {構造工学論文集},
+  year = {1993},
+  volume = {39-3},
+  pages = {999-1009},
+  file = {1993_39-3_999_鋼床版縦リブ継手部の圧縮疲労強度.pdf:JST\\1993_39-3_999_鋼床版縦リブ継手部の圧縮疲労強度.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1993/39-3-0999.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1993/mg01.htm}
 }
 
 @ARTICLE{1978_279_29,
