構造工学で1970年まで追加

--- a/C-Miki.bib
+++ b/C-Miki.bib
@@ -3399,6 +3399,19 @@
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1993/mg01.htm}
 }
 
+@ARTICLE{1976_22_15,
+  author = {藤本　盛久，青木　博文，三木　千寿，中込　忠男},
+  title = {繰返し塑性ひずみを受ける構造用鋼材の力学的特性},
+  journal = {構造工学シンポジウム},
+  year = {1976},
+  volume = {22},
+  pages = {15-22},
+  file = {1976_22_15_繰返し塑性ひずみを受ける構造用鋼材の力学的特性.pdf:JST\\1976_22_15_繰返し塑性ひずみを受ける構造用鋼材の力学的特性.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1976/22-0015.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1976/mg01.htm}
+}
+
 @ARTICLE{1978_279_29,
   author = {西村 俊夫 and 三木 千寿},
   title = {構造用鋼材のひずみ制御低サイクル疲れ特性},
