--- a/jst-jsce.bib
+++ b/jst-jsce.bib
@@ -721,3 +721,15 @@
   url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1993/mg01.htm}
 }
 
+@ARTICLE{1976_22_15,
+  author = {藤本　盛久，青木　博文，三木　千寿，中込　忠男},
+  title = {繰返し塑性ひずみを受ける構造用鋼材の力学的特性},
+  journal = {構造工学シンポジウム},
+  year = {1976},
+  volume = {22},
+  pages = {15-22},
+  file = {1976_22_15_繰返し塑性ひずみを受ける構造用鋼材の力学的特性.pdf:JST\\1976_22_15_繰返し塑性ひずみを受ける構造用鋼材の力学的特性.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/1976/22-0015.pdf},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/1976/mg01.htm}
+}
+
