構造工学の英文論文に対応
PDFをDL
BIBを作成 ==>　マージ

--- a/C-Miki.bib
+++ b/C-Miki.bib
@@ -223,6 +223,21 @@
   url = {http://ci.nii.ac.jp/naid/10012032978/}
 }
 
+@ARTICLE{2000_46A-3_1627,
+  author = {Pison UDOMWORARAT and Chitoshi MIKI and Atsushi ICHIKAWA and Eiichi
+	SASAKI and Takuya SAKAMOTO and Kaoru MITSUKI and Tetsuya HOSAKA},
+  title = {FATIGUE AND ULTIMATE STRENGTHS OF CONCRETE FILLED TUBULAR K-JOINTS
+	ON TRUSS GIRDER},
+  journal = {構造工学論文集},
+  year = {2000},
+  volume = {46A-3},
+  pages = {1627-1635},
+  file = {2000_46A-3_1627_FATIGUE AND ULTIMATE STRENGTHS OF CONCRETE FILLED TUBULAR K-JOINTS ON TRUSS GIRDER.pdf:JST\\2000_46A-3_1627_FATIGUE AND ULTIMATE STRENGTHS OF CONCRETE FILLED TUBULAR K-JOINTS ON TRUSS GIRDER.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2000/46A-3-1627.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2000/mg02.htm}
+}
+
 @ARTICLE{2002_710_9,
   author = {Pison UDOMWORARAT and 三木 千壽 and 市川 篤司 and 古明地 正典 and 光木 香 and 保坂
 	鐡矢},
@@ -238,6 +253,20 @@
   publisher = {土木学会},
   timestamp = {2011.12.05},
   url = {http://ci.nii.ac.jp/naid/10009264266/}
+}
+
+@ARTICLE{2008_54_685,
+  author = {Park Wooryong and Miki Chitoshi},
+  title = {Fatigue assessment of out-of-plane attachments with various angles
+	by using local stress approaches},
+  journal = {構造工学論文集A},
+  year = {2008},
+  volume = {54},
+  pages = {685-694},
+  file = {2008_54_685_Fatigue assessment of out-of-plane attachments with various angles by using local stress approaches.pdf:JST\\2008_54_685_Fatigue assessment of out-of-plane attachments with various angles by using local stress approaches.pdf:PDF},
+  memo = {PDF_LINK: http://library.jsce.or.jp/jsce/open/00127/2008/54-0685.pdf},
+  timestamp = {2011.12.09},
+  url = {http://www.jsce.or.jp/library/open/proc/maglist2/00127/2008/mg01.htm}
 }
 
 @ARTICLE{2002_48A-3_1099,
